@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3010 2004/05/31 01:09:39 lculik Exp $
+ * $Id: ChangeLog,v 1.3011 2004/05/31 02:37:40 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-06-01 17:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
+  * contrib/libct/ftoc.c
+    ! A fix in CTOF() for better Clipper compatibility.
 
 2004-05-30 23:35 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
   * source/rtl/tget.prg
